removed some global dependencies, added postgresql, fixed some stuff

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,29 +3,27 @@ parts =
    apache
    php
    mysql
-   redis
+   mysql_install_db
+   postgresql
+   init-pgsql
    php-memcached
    php-apc
    php-xdebug
    php-phpunit
-   php-redis
-   php-mongodb
-   pcre
+#   php-mongodb
    create_symlinks
    templates
    supervisor
 
 versions = versions
 develop = z3c.recipe.filetemplate s2.recipe
+ignore-existing = true
 
 [versions]
 apache-httpd = 2.2.17
 php = 5.3.6
-gettext = 0.18
-curl = 7.21.4
 memcached = 1.4.5
 libmemcached = 0.48
-pcre = 8.02
 
 [config]
 apache-port = 8080
@@ -60,28 +58,23 @@ on_update = true
 cmds =
  cd ${buildout:directory}/bin
 
- ln -sf ${gettext:location}/bin/gettext.sh .
- ln -sf ${curl:location}/bin/curl .
  ln -sf ${memcached:location}/bin/* .
  ln -sf ${mysql:location}/bin/* .
  ln -sf ${apache:location}/bin/* .
  ln -sf ${libmemcached:location}/bin/* .
- ln -sf ${redis:location}/src/redis-server .
- ln -sf ${redis:location}/src/redis-cli .
- ln -sf ${redis:location}/src/redis-benchmark .
- ln -sf ${redis:location}/src/redis-check-dump .
- ln -sf ${redis:location}/src/redis-check-aof .
- ln -sf ${pcre:location}/bin/* .
+ ln -sf ${postgresql:location}/bin/* .
 
 [supervisor]
 recipe = collective.recipe.supervisor
 supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.conf
 logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
 port = 9090
+pp = ${buildout:directory}/eggs/supervisor-3.0a10-py2.7.egg/supervisor/pidproxy.py
 programs =
-  10 mysql    	${mysql:location}/bin/mysqld_safe [${buildout:directory}] ${buildout:directory} true
+  10 mysql      ${supervisor:pp} [ ${mycnf:pid} ${mysql:location}/bin/mysqld_safe ${mycnf:opt} ]
+  20 postgresql ${postgresql:location}/bin/pg_ctl -D ${postgresql:location}/var/data start
   30 apache     ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf] ${buildout:directory} true
-  40 redis		${redis:location}/src/redis-server [${buildout:directory}] ${buildout:directory} true
+  40 memcached  ${memcached:location}/bin/memcached -v -p ${config:memcached-port} -U ${config:memcached-port}
 
 [php]
 recipe = hexagonit.recipe.cmmi
@@ -95,20 +88,22 @@ configure-options =
    --with-apxs2=${apache:location}/bin/apxs
    --with-config-file-path=${buildout:directory}/var/php
    --enable-force-cgi-redirect
-#   --with-iconv=${libconv:location}
-   --with-curl=${curl:location}
+   --with-curl
    --enable-track-vars
-   --with-gettext=${gettext:location}
    --enable-trans-id
    --enable-ftp
    --enable-mbstring
    --enable-xml
+   --enable-json
    --with-xml 
    --with-libmemcached-dir=${libmemcached:location}
    --without-iconv
    --with-mysqlnd
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
+   --with-sqlite3
+   --with-pdo-sqlite
+   --enable-sqlite-utf8
 
 [libmemcached]
 recipe = hexagonit.recipe.cmmi
@@ -135,52 +130,37 @@ url = http://pecl.php.net/get/xdebug
 php-location = ${php:location}
 php-configure-options = ${php:configure-options}
 
-[php-redis]
-recipe = hexagonit.recipe.cmmi
-dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
-url = https://github.com/nicolasff/phpredis/tarball/master
-configure-command = ${php:location}/bin/phpize && ./configure
-
 [php-phpunit]
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
 cmds =
+  ${php:location}/bin/pear channel-discover pear.pdepend.org
+  ${php:location}/bin/pear channel-discover pear.phpmd.org
   ${php:location}/bin/pear channel-discover pear.phpunit.de
+  ${php:location}/bin/pear channel-discover components.ez.no
+ 
+  ${php:location}/bin/pear update-channels
+  ${php:location}/bin/pear upgrade PEAR
+
+  ${php:location}/bin/pear install pdepend/PHP_Depend-beta
+  ${php:location}/bin/pear install phpmd/PHP_PMD-alpha
+  ${php:location}/bin/pear install phpunit/phpcpd
   ${php:location}/bin/pear install \
 	--force \
 	--alldeps \
 	phpunit/PHPUnit-3.4.15
+  ${php:location}/bin/pear install -f phpunit/DbUnit
+  ${php:location}/bin/pear install -f phpunit/PHPUnit_MockObject
+  ${php:location}/bin/pear install -f phpunit/PHPUnit_Selenium	
 php-configure-options = ${php:configure-options}
-
-[redis]
-recipe = hexagonit.recipe.cmmi
-url = http://redis.googlecode.com/files/redis-2.2.11.tar.gz
-configure-command = #
-make-install-command = #
-
-[libconv]
-recipe = hexagonit.recipe.cmmi
-url = http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.13.1.tar.gz
-
-[libevent]
-recipe = hexagonit.recipe.cmmi
-url = http://sourceforge.net/projects/levent/files/libevent/libevent-2.0/libevent-2.0.10-stable.tar.gz
-
-[gettext]
-recipe = hexagonit.recipe.cmmi
-url = http://ftp.gnu.org/gnu/gettext/gettext-${versions:gettext}.tar.gz
-
-[curl]
-recipe = hexagonit.recipe.cmmi
-url = http://curl.haxx.se/download/curl-${versions:curl}.tar.gz
 
 [memcached]
 recipe = hexagonit.recipe.cmmi
 url = http://memcached.googlecode.com/files/memcached-${versions:memcached}.tar.gz
 port = ${config:memcached-port}
 configure-options = 
-   --with-libevent=${libevent:location}
+   --with-libevent
 
 [apache]
 recipe = hexagonit.recipe.cmmi
@@ -199,37 +179,63 @@ configure-options =
   --enable-proxy-connect
   --enable-proxy-http
 
-[cmake]
-recipe = hexagonit.recipe.cmmi
-url = http://www.cmake.org/files/v2.8/cmake-2.8.4.tar.gz
-strip-top-level-dir = true
-
 [mysql]
 recipe = hexagonit.recipe.cmmi
-url = http://ftp.gwdg.de/pub/misc/mysql/Downloads/MySQL-5.5/mysql-5.5.13.tar.gz 
-strip-top-level-dir = true
+url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz
 port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
+configure-command = sh configure
+configure-options =
+	--with-extra-charsets=complex
+	--enable-thread-safe-client
+	--enable-assembler
+	--enable-local-infile
+	--with-big-tables
+	--enable-large-files-without-debug
+		
+[mysql_install_db]
+recipe = plone.recipe.command
+command = 
+    ${mysql:location}/bin/mysql_install_db --datadir=${mycnf:datadir}
+    echo 
+    echo After starting supervisord, you may want to run:
+    echo ${buildout:directory}/parts/mysql/bin/mysqladmin -u root password 'new-password'
+    echo
+update-command = ${mysql_install_db:command}
 
-configure-command = ${cmake:location}/bin/cmake
-configure-options = 
-	-DCMAKE_INSTALL_PREFIX=${buildout:directory}/parts/mysql
-	-DEXTRA_CHARSETS=all
-	-DMYSQL_UNIX_ADDR=${buildout:directory}/var/mysql/mysql.sock
-	-DENABLED_LOCAL_INFILE=1
-	-DWITH_FEDERATED_STORAGE_ENGINE=1
-	-DWITH_INNODB_STORAGE_ENGINE=1
+[mycnf]
+recipe = plone.recipe.command
+command =
+    echo
+    echo These options are passed to mysqld_safe: ${mycnf:opt}
+    echo
+basedir=${mysql:location}
+datadir=${buildout:directory}/var/mysql
+pid=${mycnf:datadir}/mysql.pid
+err = ${mycnf:datadir}/log/mysql.err
+sock = /tmp/mysql.sock
+opt = --port=${mysql:port} --pid-file=${mycnf:pid} --log-error=${mycnf:err} --basedir=${mycnf:basedir} --datadir=${mycnf:datadir} --socket=${mycnf:sock}
 
-[mongodb]
+[postgresql]
 recipe = hexagonit.recipe.cmmi
-url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
+url = http://wwwmaster.postgresql.org/redir/296/h/source/v9.0.4/postgresql-9.0.4.tar.gz
+extra_options =
+  --with-readline
+  --enable-thread-safety
 
-[php-mongodb]
-recipe = hexagonit.recipe.cmmi
-dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
-url = https://github.com/mongodb/mongo-php-driver/tarball/master
-configure-command = ${php:location}/bin/phpize && ./configure
+[init-pgsql]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = false
+cmds = 
+    ${postgresql:location}/bin/initdb -D ${postgresql:location}/var/data -E UNICODE
 
-[pcre]
-recipe = hexagonit.recipe.cmmi
-url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${versions:pcre}.tar.gz
+#[mongodb]
+#recipe = hexagonit.recipe.cmmi
+#url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
+
+#[php-mongodb]
+#recipe = hexagonit.recipe.cmmi
+#dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
+#url = https://github.com/mongodb/mongo-php-driver/tarball/master
+#configure-command = ${php:location}/bin/phpize && ./configure
