readded mongo, some fixes

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,13 +4,14 @@ parts =
    php
    mysql
    mysql_install_db
+   mongodb
    postgresql
    init-pgsql
    php-memcached
    php-apc
    php-xdebug
    php-phpunit
-#   php-mongodb
+   php-mongodb
    create_symlinks
    templates
    supervisor
@@ -69,12 +70,12 @@ recipe = collective.recipe.supervisor
 supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.conf
 logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
 port = 9090
-pp = ${buildout:directory}/eggs/supervisor-3.0a10-py2.7.egg/supervisor/pidproxy.py
 programs =
-  10 mysql      ${supervisor:pp} [ ${mycnf:pid} ${mysql:location}/bin/mysqld_safe ${mycnf:opt} ]
-  20 postgresql ${postgresql:location}/bin/pg_ctl -D ${postgresql:location}/var/data start
-  30 apache     ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf] ${buildout:directory} true
-  40 memcached  ${memcached:location}/bin/memcached -v -p ${config:memcached-port} -U ${config:memcached-port}
+  10 mysql      ${mysql:location}/bin/mysqld_safe ${mycnf:opt}
+  10 postgresql ${postgresql:location}/bin/pg_ctl [-D ${postgresql:location}/var/data start]
+  10 memcached  ${memcached:location}/bin/memcached [-v -p ${config:memcached-port} -U ${config:memcached-port}]
+  30 apache     ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf]
+  
 
 [php]
 recipe = hexagonit.recipe.cmmi
@@ -135,6 +136,7 @@ recipe = collective.recipe.cmd
 on_install = true
 on_update = true
 cmds =
+  mv ${php:location}/bin/php.dSYM ${php:location}/bin/php
   ${php:location}/bin/pear channel-discover pear.pdepend.org
   ${php:location}/bin/pear channel-discover pear.phpmd.org
   ${php:location}/bin/pear channel-discover pear.phpunit.de
@@ -146,10 +148,7 @@ cmds =
   ${php:location}/bin/pear install pdepend/PHP_Depend-beta
   ${php:location}/bin/pear install phpmd/PHP_PMD-alpha
   ${php:location}/bin/pear install phpunit/phpcpd
-  ${php:location}/bin/pear install \
-	--force \
-	--alldeps \
-	phpunit/PHPUnit-3.4.15
+  ${php:location}/bin/pear install --force --alldeps phpunit/PHPUnit-3.4.15
   ${php:location}/bin/pear install -f phpunit/DbUnit
   ${php:location}/bin/pear install -f phpunit/PHPUnit_MockObject
   ${php:location}/bin/pear install -f phpunit/PHPUnit_Selenium	
@@ -182,9 +181,10 @@ configure-options =
 [mysql]
 recipe = hexagonit.recipe.cmmi
 url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz
+strip-top-level-dir = true
 port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
-configure-command = sh configure
+#configure-command = sh configure
 configure-options =
 	--with-extra-charsets=complex
 	--enable-thread-safe-client
@@ -211,10 +211,9 @@ command =
     echo
 basedir=${mysql:location}
 datadir=${buildout:directory}/var/mysql
-pid=${mycnf:datadir}/mysql.pid
 err = ${mycnf:datadir}/log/mysql.err
 sock = /tmp/mysql.sock
-opt = --port=${mysql:port} --pid-file=${mycnf:pid} --log-error=${mycnf:err} --basedir=${mycnf:basedir} --datadir=${mycnf:datadir} --socket=${mycnf:sock}
+opt = --port=${mysql:port} --log-error=${mycnf:err} --basedir=${mycnf:basedir} --datadir=${mycnf:datadir} --socket=${mycnf:sock}
 
 [postgresql]
 recipe = hexagonit.recipe.cmmi
@@ -234,8 +233,22 @@ cmds =
 #recipe = hexagonit.recipe.cmmi
 #url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
 
+[mongodb]
+recipe = rod.recipe.mongodb
+darwin-32bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-i386-1.8.2.tgz
+darwin-64bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-x86_64-1.8.2.tgz
+linux2-32bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-i686-1.8.2.tgz
+linux2-64bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-1.8.2.tgz
+
 #[php-mongodb]
 #recipe = hexagonit.recipe.cmmi
 #dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 #url = https://github.com/mongodb/mongo-php-driver/tarball/master
 #configure-command = ${php:location}/bin/phpize && ./configure
+
+[php-mongodb]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+cmds =
+  ${php:location}/bin/pecl install mongo
