--- a/template/parts/php/etc/conf.d/APC.ini.in
+++ b/template/parts/php/etc/conf.d/APC.ini.in
@@ -1,6 +1,6 @@
 extension = apc.so
 apc.shm_segments = 1
-apc.shm_size = 128
+apc.shm_size = 128M
 apc.ttl = 7200
 apc.user_ttl = 7200
 apc.num_files_hint = 1024
