various fixes for supervisor

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,13 +12,12 @@ parts =
    php-xdebug
    php-phpunit
    php-mongodb
-   create_symlinks
+#   create_symlinks
    templates
    supervisor
 
 versions = versions
 develop = z3c.recipe.filetemplate s2.recipe
-ignore-existing = true
 
 [versions]
 apache-httpd = 2.2.17
@@ -35,7 +34,6 @@ memcached-port = 11222
 supervisord-port = 9090
 
 [templates]
-
 recipe = z3c.recipe.filetemplate
 source-directory = template
 server_admin = admin@localhost
@@ -43,22 +41,12 @@ interpreted-options = hostname
 hostname = os.uname()[1]
 force-overwrite = true
 
-[create_basic_symlinks]
-recipe = collective.recipe.cmd
-on_install = true
-on_update = true
-dummy_option = ${php:url} # hack to ensure that php is compiled before creating the symlinks
-cmds =
- cd ${buildout:directory}/bin
- ln -sf ${php:location}/bin/* .
-
 [create_symlinks]
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
 cmds =
  cd ${buildout:directory}/bin
-
  ln -sf ${memcached:location}/bin/* .
  ln -sf ${mysql:location}/bin/* .
  ln -sf ${apache:location}/bin/* .
@@ -71,17 +59,17 @@ supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/super
 logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
 port = 9090
 programs =
-  10 mysql      ${mysql:location}/bin/mysqld_safe ${mycnf:opt}
-  10 postgresql ${postgresql:location}/bin/pg_ctl [-D ${postgresql:location}/var/data start]
-  10 memcached  ${memcached:location}/bin/memcached [-v -p ${config:memcached-port} -U ${config:memcached-port}]
-  30 apache     ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf]
+  10 mysql ${mysql:location}/bin/mysqld_safe [${mysql:opt}]
+  10 postgresql ${postgresql:location}/bin/postgres [-D ${postgresql:location}/var/data]
+  10 memcached ${memcached:location}/bin/memcached [-v -p ${config:memcached-port} -U ${config:memcached-port}]
+  10 apache ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf]
+  10 mongodb ${mongodb:location}/bin/mongod [--dbpath=${mongodb:dbpath} --reset]
   
-
 [php]
 recipe = hexagonit.recipe.cmmi
 dummy_option = ${templates:source-directory}
+apache_port = ${apache:port}
 url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
-
 configure-options = 
    --with-config-file-scan-dir=${buildout:parts-directory}/php/etc/conf.d
    --with-config-file-path=${buildout:parts-directory}/php/etc
@@ -112,21 +100,18 @@ url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
 
 [php-memcached]
 recipe = s2.recipe:phpext
-dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = http://pecl.php.net/get/memcached-1.0.2.tgz
 php-location = ${php:location}
 configure-options = ${php:configure-options}
 
 [php-apc]
 recipe = s2.recipe:phpext
-dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = http://pecl.php.net/get/APC
 php-location = ${php:location}
 php-configure-options = ${php:configure-options}
 
 [php-xdebug]
 recipe = s2.recipe:phpext
-dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = http://pecl.php.net/get/xdebug
 php-location = ${php:location}
 php-configure-options = ${php:configure-options}
@@ -141,10 +126,8 @@ cmds =
   ${php:location}/bin/pear channel-discover pear.phpmd.org
   ${php:location}/bin/pear channel-discover pear.phpunit.de
   ${php:location}/bin/pear channel-discover components.ez.no
- 
   ${php:location}/bin/pear update-channels
   ${php:location}/bin/pear upgrade PEAR
-
   ${php:location}/bin/pear install pdepend/PHP_Depend-beta
   ${php:location}/bin/pear install phpmd/PHP_PMD-alpha
   ${php:location}/bin/pear install phpunit/phpcpd
@@ -164,6 +147,7 @@ configure-options =
 [apache]
 recipe = hexagonit.recipe.cmmi
 url = http://archive.apache.org/dist/httpd/httpd-${versions:apache-httpd}.tar.bz2
+port = ${config:apache-port}
 configure-options =
   --enable-so
   --enable-rewrite
@@ -184,7 +168,7 @@ url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz
 strip-top-level-dir = true
 port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
-#configure-command = sh configure
+sock = /tmp/mysql.sock
 configure-options =
 	--with-extra-charsets=complex
 	--enable-thread-safe-client
@@ -192,28 +176,18 @@ configure-options =
 	--enable-local-infile
 	--with-big-tables
 	--enable-large-files-without-debug
+	--with-unix-socket-path=${mysql:sock}
+basedir=${mysql:location}
+datadir=${buildout:directory}/var
+err = ${mysql:datadir}/log/mysql.err	
+opt = --port=${mysql:port} --log-error=${mysql:err} --basedir=${mysql:basedir} --datadir=${mysql:datadir} --socket=${mysql:sock}	
 		
 [mysql_install_db]
 recipe = plone.recipe.command
+on_install = true
+on_update = false
 command = 
-    ${mysql:location}/bin/mysql_install_db --datadir=${mycnf:datadir}
-    echo 
-    echo After starting supervisord, you may want to run:
-    echo ${buildout:directory}/parts/mysql/bin/mysqladmin -u root password 'new-password'
-    echo
-update-command = ${mysql_install_db:command}
-
-[mycnf]
-recipe = plone.recipe.command
-command =
-    echo
-    echo These options are passed to mysqld_safe: ${mycnf:opt}
-    echo
-basedir=${mysql:location}
-datadir=${buildout:directory}/var/mysql
-err = ${mycnf:datadir}/log/mysql.err
-sock = /tmp/mysql.sock
-opt = --port=${mysql:port} --log-error=${mycnf:err} --basedir=${mycnf:basedir} --datadir=${mycnf:datadir} --socket=${mycnf:sock}
+    ${mysql:location}/bin/mysql_install_db --datadir=${mysql:datadir}
 
 [postgresql]
 recipe = hexagonit.recipe.cmmi
@@ -229,22 +203,19 @@ on_update = false
 cmds = 
     ${postgresql:location}/bin/initdb -D ${postgresql:location}/var/data -E UNICODE
 
-#[mongodb]
-#recipe = hexagonit.recipe.cmmi
-#url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
-
 [mongodb]
 recipe = rod.recipe.mongodb
 darwin-32bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-i386-1.8.2.tgz
 darwin-64bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-x86_64-1.8.2.tgz
 linux2-32bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-i686-1.8.2.tgz
 linux2-64bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-1.8.2.tgz
-
-#[php-mongodb]
-#recipe = hexagonit.recipe.cmmi
-#dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
-#url = https://github.com/mongodb/mongo-php-driver/tarball/master
-#configure-command = ${php:location}/bin/phpize && ./configure
+quite = true
+fork = false
+logpath = ${buildout:directory}/var/mongodb/log
+dbpath = ${buildout:directory}/var/mongodb/data
+directoyperdb = true
+master = true
+update = true
 
 [php-mongodb]
 recipe = collective.recipe.cmd
