working solutions with full supervisor support

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -59,11 +59,11 @@ supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/super
 logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
 port = 9090
 programs =
-  10 mysql ${mysql:location}/bin/mysqld_safe [${mysql:opt}]
+  10 mysql ${mysql:location}/libexec/mysqld
   10 postgresql ${postgresql:location}/bin/postgres [-D ${postgresql:location}/var/data]
   10 memcached ${memcached:location}/bin/memcached [-v -p ${config:memcached-port} -U ${config:memcached-port}]
   10 apache ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf]
-  10 mongodb ${mongodb:location}/bin/mongod [--dbpath=${mongodb:dbpath} --reset]
+  10 mongodb ${buildout:parts-directory}/mongodb/bin/mongod [--dbpath=${mongodb:dbpath}]
   
 [php]
 recipe = hexagonit.recipe.cmmi
@@ -177,17 +177,13 @@ configure-options =
 	--with-big-tables
 	--enable-large-files-without-debug
 	--with-unix-socket-path=${mysql:sock}
-basedir=${mysql:location}
-datadir=${buildout:directory}/var
-err = ${mysql:datadir}/log/mysql.err	
-opt = --port=${mysql:port} --log-error=${mysql:err} --basedir=${mysql:basedir} --datadir=${mysql:datadir} --socket=${mysql:sock}	
 		
 [mysql_install_db]
 recipe = plone.recipe.command
 on_install = true
 on_update = false
 command = 
-    ${mysql:location}/bin/mysql_install_db --datadir=${mysql:datadir}
+    ${mysql:location}/bin/mysql_install_db --datadir=${buildout:directory}/var/mysql/db
 
 [postgresql]
 recipe = hexagonit.recipe.cmmi
