php symlinks are now correct

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -45,8 +45,10 @@ force-overwrite = true
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
+php-init-location = ${php-init:location}
 cmds =
  cd ${buildout:directory}/bin
+ ln -sf ${php:location}/bin/* .
  ln -sf ${memcached:location}/bin/* .
  ln -sf ${mysql:location}/bin/* .
  ln -sf ${apache:location}/bin/* .
@@ -94,6 +96,14 @@ configure-options =
    --with-pdo-sqlite
    --enable-sqlite-utf8
 
+[php-init]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+location = ${php:location}
+cmds =
+  mv ${php:location}/bin/php.dSYM ${php:location}/bin/php
+
 [libmemcached]
 recipe = hexagonit.recipe.cmmi
 url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
@@ -120,8 +130,8 @@ php-configure-options = ${php:configure-options}
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
+php-init-location = ${php-init:location}
 cmds =
-  mv ${php:location}/bin/php.dSYM ${php:location}/bin/php
   ${php:location}/bin/pear channel-discover pear.pdepend.org
   ${php:location}/bin/pear channel-discover pear.phpmd.org
   ${php:location}/bin/pear channel-discover pear.phpunit.de
