--- a/buildout.cfg
+++ b/buildout.cfg
@@ -59,6 +59,8 @@ cmds =
 recipe = collective.recipe.supervisor
 supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.conf
 logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
+on_install = true
+on_update = false
 port = 9090
 programs =
   10 mysql ${mysql:location}/libexec/mysqld
