--- a/buildout.cfg
+++ b/buildout.cfg
@@ -138,12 +138,13 @@ cmds =
   ${php:location}/bin/pear channel-discover pear.phpmd.org
   ${php:location}/bin/pear channel-discover pear.phpunit.de
   ${php:location}/bin/pear channel-discover components.ez.no
+  ${php:location}/bin/pear channel-discover pear.symfony-project.com
   ${php:location}/bin/pear update-channels
   ${php:location}/bin/pear upgrade PEAR
   ${php:location}/bin/pear install pdepend/PHP_Depend-beta
   ${php:location}/bin/pear install phpmd/PHP_PMD-alpha
   ${php:location}/bin/pear install phpunit/phpcpd
-  ${php:location}/bin/pear install --force --alldeps phpunit/PHPUnit-3.4.15
+  ${php:location}/bin/pear install -f phpunit/PHPUnit
   ${php:location}/bin/pear install -f phpunit/DbUnit
   ${php:location}/bin/pear install -f phpunit/PHPUnit_MockObject
   ${php:location}/bin/pear install -f phpunit/PHPUnit_Selenium	
