--- a/buildout.cfg
+++ b/buildout.cfg
@@ -141,6 +141,7 @@ cmds =
   ${php:location}/bin/pear channel-discover pear.symfony-project.com
   ${php:location}/bin/pear update-channels
   ${php:location}/bin/pear upgrade PEAR
+  ${php:location}/bin/pear upgrade PhpDocumentor
   ${php:location}/bin/pear install pdepend/PHP_Depend-beta
   ${php:location}/bin/pear install phpmd/PHP_PMD-alpha
   ${php:location}/bin/pear install phpunit/phpcpd
