removed not needed develop recepies

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -60,7 +60,7 @@ recipe = collective.recipe.supervisor
 supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.conf
 logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
 on_install = true
-on_update = false
+on_update = true
 port = 9090
 programs =
   10 mysql ${mysql:location}/libexec/mysqld
