removed not needed supervisord.conf.in template moved additional vhosts to var/apache/vhosts added php gd support

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -66,7 +66,7 @@ programs =
   10 mysql ${mysql:location}/libexec/mysqld
   10 postgresql ${postgresql:location}/bin/postgres [-D ${postgresql:location}/var/data]
   10 memcached ${memcached:location}/bin/memcached [-v -p ${config:memcached-port} -U ${config:memcached-port}]
-  10 apache ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf]
+  20 apache ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf]
   10 mongodb ${buildout:parts-directory}/mongodb/bin/mongod [--dbpath=${mongodb:dbpath}]
   
 [php]
@@ -97,6 +97,7 @@ configure-options =
    --with-sqlite3
    --with-pdo-sqlite
    --enable-sqlite-utf8
+   --with-gd
 
 [php-init]
 recipe = collective.recipe.cmd
