--- a/template/parts/apache/conf/httpd.conf.in
+++ b/template/parts/apache/conf/httpd.conf.in
@@ -471,3 +471,5 @@ Include conf/extra/httpd-vhosts.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+
+Include ${buildout:directory}/var/apache/vhosts/*.conf
