added memcache extension for session management

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,14 @@
 [buildout]
 parts =     
    apache
+   apache-init
    php
    mysql
    mysql_install_db
    mongodb
    postgresql
    init-pgsql
+   php-memcache
    php-memcached
    php-apc
    php-xdebug
@@ -18,6 +20,7 @@ parts =
 
 versions = versions
 develop = z3c.recipe.filetemplate s2.recipe
+lib-prefix = /usr/local
 
 [versions]
 apache-httpd = 2.2.17
@@ -87,8 +90,19 @@ configure-options =
    --enable-ftp
    --enable-mbstring
    --enable-xml
+   --enable-xmlwriter
+   --enable-dom
+   --enable-filter
+   --enable-ctype
+   --enable-session
+   --enable-simplexml
+   --enable-hash
+   --enable-tokenizer
+   --enable-fileinfo
+   --with-pcre-regex
    --enable-json
    --with-xml 
+   --with-xsl
    --with-libmemcached-dir=${libmemcached:location}
    --without-iconv
    --with-mysqlnd
@@ -97,7 +111,13 @@ configure-options =
    --with-sqlite3
    --with-pdo-sqlite
    --enable-sqlite-utf8
+   --with-zlib
    --with-gd
+   --enable-gd-native-ttf
+   --with-jpeg-dir=${buildout:lib-prefix}
+   --with-png-dir=/usr/X11
+   --with-xpm-dir=/usr/X11
+   --with-freetype-dir=/usr/X11
 
 [php-init]
 recipe = collective.recipe.cmd
@@ -114,6 +134,12 @@ url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
 [php-memcached]
 recipe = s2.recipe:phpext
 url = http://pecl.php.net/get/memcached-1.0.2.tgz
+php-location = ${php:location}
+configure-options = ${php:configure-options}
+
+[php-memcache]
+recipe = s2.recipe:phpext
+url = http://pecl.php.net/get/memcache-2.2.5.tgz
 php-location = ${php:location}
 configure-options = ${php:configure-options}
 
@@ -176,6 +202,13 @@ configure-options =
   --enable-proxy
   --enable-proxy-connect
   --enable-proxy-http
+
+[apache-init]
+recipe = plone.recipe.command
+on_install = true
+on_update = false
+command = 
+    mkdir -p ${buildout:directory}/var/apache/vhosts
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
