added some php extensions, removed memcache session handler, added some more port configuration options

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,16 +17,19 @@ parts =
    create_symlinks
    templates
    supervisor
-
 versions = versions
 develop = z3c.recipe.filetemplate s2.recipe
 lib-prefix = /usr/local
+x11-lib-prefix = /usr/X11
 
 [versions]
 apache-httpd = 2.2.17
 php = 5.3.6
 memcached = 1.4.5
 libmemcached = 0.48
+mongodb = 1.8.2
+php-memcache = 2.2.5
+php-memcached = 1.0.2
 
 [config]
 apache-port = 8080
@@ -35,6 +38,9 @@ mysqld-port = 3306
 mysqld-root-password = root
 memcached-port = 11222
 supervisord-port = 9090
+mysql-socket = /tmp/mysql.sock
+mongodb-port = 27017
+postgresql-port = 5432
 
 [templates]
 recipe = z3c.recipe.filetemplate
@@ -78,8 +84,8 @@ dummy_option = ${templates:source-directory}
 apache_port = ${apache:port}
 url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
 configure-options = 
-   --with-config-file-scan-dir=${buildout:parts-directory}/php/etc/conf.d
-   --with-config-file-path=${buildout:parts-directory}/php/etc
+   --with-config-file-scan-dir=${buildout:parts-directory}/${:_buildout_section_name_}/etc/conf.d
+   --with-config-file-path=${buildout:parts-directory}/${:_buildout_section_name_}/etc
    --enable-cgi
    --with-apxs2=${apache:location}/bin/apxs
    --with-config-file-path=${buildout:directory}/var/php
@@ -109,15 +115,19 @@ configure-options =
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
    --with-sqlite3
+   --with-pgsql
+   --with-pdo-pgsql
+   --with-tidy
+   --with-mcrypt
    --with-pdo-sqlite
    --enable-sqlite-utf8
    --with-zlib
    --with-gd
    --enable-gd-native-ttf
    --with-jpeg-dir=${buildout:lib-prefix}
-   --with-png-dir=/usr/X11
-   --with-xpm-dir=/usr/X11
-   --with-freetype-dir=/usr/X11
+   --with-png-dir=${buildout:x11-lib-prefix}
+   --with-xpm-dir=${buildout:x11-lib-prefix}
+   --with-freetype-dir=${buildout:x11-lib-prefix}
 
 [php-init]
 recipe = collective.recipe.cmd
@@ -133,13 +143,13 @@ url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
 
 [php-memcached]
 recipe = s2.recipe:phpext
-url = http://pecl.php.net/get/memcached-1.0.2.tgz
+url = http://pecl.php.net/get/memcached-${versions:php-memcached}.tgz
 php-location = ${php:location}
 configure-options = ${php:configure-options}
 
 [php-memcache]
 recipe = s2.recipe:phpext
-url = http://pecl.php.net/get/memcache-2.2.5.tgz
+url = http://pecl.php.net/get/memcache-${versions:php-memcache}.tgz
 php-location = ${php:location}
 configure-options = ${php:configure-options}
 
@@ -216,7 +226,6 @@ url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz
 strip-top-level-dir = true
 port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
-sock = /tmp/mysql.sock
 configure-options =
 	--with-extra-charsets=complex
 	--enable-thread-safe-client
@@ -224,7 +233,7 @@ configure-options =
 	--enable-local-infile
 	--with-big-tables
 	--enable-large-files-without-debug
-	--with-unix-socket-path=${mysql:sock}
+	--with-unix-socket-path=${config:mysql-socket}
 		
 [mysql_install_db]
 recipe = plone.recipe.command
@@ -239,6 +248,7 @@ url = http://wwwmaster.postgresql.org/redir/296/h/source/v9.0.4/postgresql-9.0.4
 extra_options =
   --with-readline
   --enable-thread-safety
+  --with-pgport=${config:postgresql-port}
 
 [init-pgsql]
 recipe = collective.recipe.cmd
@@ -249,10 +259,10 @@ cmds =
 
 [mongodb]
 recipe = rod.recipe.mongodb
-darwin-32bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-i386-1.8.2.tgz
-darwin-64bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-x86_64-1.8.2.tgz
-linux2-32bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-i686-1.8.2.tgz
-linux2-64bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-1.8.2.tgz
+darwin-32bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-i386-${versions:mongodb}.tgz
+darwin-64bit-url = http://fastdl.mongodb.org/osx/mongodb-osx-x86_64-${versions:mongodb}.tgz
+linux2-32bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-i686-${versions:mongodb}.tgz
+linux2-64bit-url = http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-${versions:mongodb}.tgz
 quite = true
 fork = false
 logpath = ${buildout:directory}/var/mongodb/log
@@ -260,6 +270,7 @@ dbpath = ${buildout:directory}/var/mongodb/data
 directoyperdb = true
 master = true
 update = true
+port = ${config:mongodb-port}
 
 [php-mongodb]
 recipe = collective.recipe.cmd
