added iconv to php

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -110,7 +110,7 @@ configure-options =
    --with-xml 
    --with-xsl
    --with-libmemcached-dir=${libmemcached:location}
-   --without-iconv
+   --with-iconv
    --with-mysqlnd
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
