added bcmath and openssl

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -123,6 +123,8 @@ configure-options =
    --enable-sqlite-utf8
    --with-zlib
    --with-gd
+   --with-openssl
+   --enable-bcmath
    --enable-gd-native-ttf
    --with-jpeg-dir=${buildout:lib-prefix}
    --with-png-dir=${buildout:x11-lib-prefix}
