fix php mirror url

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts =     
+parts =
    apache
    apache-init
    php
@@ -77,13 +77,13 @@ programs =
   10 memcached ${memcached:location}/bin/memcached [-v -p ${config:memcached-port} -U ${config:memcached-port}]
   20 apache ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf]
   10 mongodb ${buildout:parts-directory}/mongodb/bin/mongod [--dbpath=${mongodb:dbpath}]
-  
+
 [php]
 recipe = hexagonit.recipe.cmmi
 dummy_option = ${templates:source-directory}
 apache_port = ${apache:port}
-url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
-configure-options = 
+url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/this/mirror
+configure-options =
    --with-config-file-scan-dir=${buildout:parts-directory}/${:_buildout_section_name_}/etc/conf.d
    --with-config-file-path=${buildout:parts-directory}/${:_buildout_section_name_}/etc
    --enable-cgi
@@ -107,7 +107,7 @@ configure-options =
    --enable-fileinfo
    --with-pcre-regex
    --enable-json
-   --with-xml 
+   --with-xml
    --with-xsl
    --with-libmemcached-dir=${libmemcached:location}
    --with-iconv
@@ -187,14 +187,14 @@ cmds =
   ${php:location}/bin/pear install -f phpunit/PHPUnit
   ${php:location}/bin/pear install -f phpunit/DbUnit
   ${php:location}/bin/pear install -f phpunit/PHPUnit_MockObject
-  ${php:location}/bin/pear install -f phpunit/PHPUnit_Selenium	
+  ${php:location}/bin/pear install -f phpunit/PHPUnit_Selenium
 php-configure-options = ${php:configure-options}
 
 [memcached]
 recipe = hexagonit.recipe.cmmi
 url = http://memcached.googlecode.com/files/memcached-${versions:memcached}.tar.gz
 port = ${config:memcached-port}
-configure-options = 
+configure-options =
    --with-libevent
 
 [apache]
@@ -219,7 +219,7 @@ configure-options =
 recipe = plone.recipe.command
 on_install = true
 on_update = false
-command = 
+command =
     mkdir -p ${buildout:directory}/var/apache/vhosts
 
 [mysql]
@@ -236,12 +236,12 @@ configure-options =
 	--with-big-tables
 	--enable-large-files-without-debug
 	--with-unix-socket-path=${config:mysql-socket}
-		
+
 [mysql_install_db]
 recipe = plone.recipe.command
 on_install = true
 on_update = false
-command = 
+command =
     ${mysql:location}/bin/mysql_install_db --datadir=${buildout:directory}/var/mysql/db
 
 [postgresql]
@@ -256,7 +256,7 @@ extra_options =
 recipe = collective.recipe.cmd
 on_install = true
 on_update = false
-cmds = 
+cmds =
     ${postgresql:location}/bin/initdb -D ${postgresql:location}/var/data -E UNICODE
 
 [mongodb]
